// This program is free software, you can redistribute it and/or modify.
// Copyright (c) 2025 Huawei Technologies Co., Ltd.
// This file is a part of the CANN Open Software.
// Licensed under CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING
// BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// The code snippet comes from Huawei's open-source Ascend project.
// Copyright 2020 Huawei Technologies Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// You may obtain a copy of the License at 
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";
package aicpuops;
import "cpu_tensor.proto";
import "cpu_tensor_shape.proto";

message AttrValue {

  message ArrayValue {
    repeated bytes s = 2;                         //"array(string)"
    repeated int64 i = 3 [ packed = true ];       //"array(int)"
    repeated float f = 4 [ packed = true ];       //"array(float)"
    repeated bool b = 5 [ packed = true ];        //"array(bool)"
    repeated int32 type = 6 [ packed = true ];    //"array(type)"
    repeated TensorShape shape = 7;               //"array(shape)"
    repeated Tensor tensor = 8;                   //"array(tensor)"
  }
  
  message ListListInt{
      message ListInt{
          repeated int64 list_i             = 1; // list int
      }
      repeated ListInt list_list_i          = 1; // list list int
  }

  oneof value {
    ArrayValue array = 1;
    bytes s = 2;           //"string"
    int64 i = 3;           //"int"
    float f = 4;           //"float"
    bool b = 5;            //"bool"
    int32 type = 6;        //"type"
    TensorShape shape = 7; //"shape"
    Tensor tensor = 8;     //"tensor"
    ListListInt list_list_int  = 9;  // List List Int type
  }
}
